Fix overflow
I hope

--- a/eNote/static/stylesheets/base.css
+++ b/eNote/static/stylesheets/base.css
@@ -14,6 +14,7 @@ body {
 
 div{
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .navbar-backgroud {
